--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="src/style.css">
     <title>Croissant Homepage</title>
 </head>
 <body>
@@ -32,9 +32,9 @@
     </div>
   </div>
   <div class="d-flex justify-content-evenly">
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="index.html">Homepage</a>
+    <a href="photo.html">Photo</a>
+    <a href="contact.html">Contact</a>
   </div>
     </div>
 </body>
