--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="src/style.css">
     <title>Photo Page</title>
 </head>
 <body>
@@ -14,9 +14,9 @@
        <img class="w-100 mb-5" src="/images/croissant.jpg" alt="Croissants"> 
     </div>
     <div class="d-flex justify-content-evenly">
-        <a href="/">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="index.html">Homepage</a>
+        <a href="photo.html">Photo</a>
+        <a href="contact.html">Contact</a>
     </div>
 </body>
 </html>
