--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <p class="contact-info text-center">To contact croissant.com, please email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a> for
             more info.</p>
     </div>
-    <div class="d-flex justify-content-evenly">
+    <div class="d-flex justify-content-around">
         <a href="index.html">Homepage</a>
         <a href="photo.html">Photo</a>
         <a href="contact.html">Contact</a>
