Made Website SEO - frendly

--- a/photo.html
+++ b/photo.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <h1 class="text-center m-5">🥐A picture of a croissants</h1>
-       <img class="w-100 mb-5" src="/images/croissant.jpg" alt="Croissants"> 
+       <img class="w-100 mb-5" src="/images/croissant.jpg" alt="Croissant"> 
     </div>
     <div class="d-flex justify-content-evenly">
-        <a href="index.html">Homepage</a>
-        <a href="photo.html">Photo</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" title="Croissant Website">Homepage</a>
+        <a href="photo.html" title="Coissant Photo">Photo</a>
+        <a href="contact.html" title="Contact us">Contact</a>
     </div>
 </body>
 </html>
