--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
             more info.</p>
     </div>
     <div class="d-flex justify-content-around">
-        <a href="index.html">Homepage</a>
-        <a href="photo.html">Photo</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" title="Croissant Website">Homepage</a>
+        <a href="photo.html" title="Croissant Photo">Photo</a>
+        <a href="contact.html" title="Contact us">Contact</a>
     </div>
 </body>
 
