--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hier you will finde information about croissants"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style.css">
@@ -32,9 +33,9 @@
     </div>
   </div>
   <div class="d-flex justify-content-evenly">
-    <a href="index.html">Homepage</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" title="Croissant Website">Homepage</a>
+    <a href="photo.html" title="Coissant Photo">Photo</a>
+    <a href="contact.html" title="Contact us">Contact</a>
   </div>
     </div>
 </body>
