--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="info-paragraph col-6 p-1 lh-base">
         <p>Crescent-shaped breads have been made since the Renaissance, and crescent-shaped cakes possibly since antiquity.
-        Kipferls have long been a staple of Austrian cuisine, and are often found in French bakeries and pâtisseries. The modern
+        Kipferls have long been a staple of Austrian, and are often found in French bakeries and pâtisseries. The modern
         croissant was developed in the early 20th century when French bakers replaced the brioche dough of the kipferl with a
         yeast-leavened laminated dough. In the late 1970s, the development of factory-made, frozen, preformed but unbaked
         dough made them into a fast food that could be freshly baked by unskilled labor. The croissant bakery, notably the La
